[B]Retrospect v5.2.2 - Changelog - 2020-04-22[/B]

This new version of Retrospect mainly has some under the hood changes. These should not change functionality of Retrospect.

Besides this, the kijk.nl channel was updated to use the new GraphQL backend and NOS.nl and VRT.nu were fixed.

[B]Framework related[/B]
* Fixed: issue where shutil.copy() or shutil.move() no longer overrides existing files in Py3

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: Kijk.nl PersistedQueries seem unstable
* Fixed: Include "standalone" video's for Dplay (Fixes #1361)