@@ -1,6 +1,6 @@
 {
   "id": "channel.mtg",
-  "version": "5.2.0",
+  "version": "5.2.1",
   "textures": {
     "channel.mtg.tvse/tv3ltfanart.jpg": "cb51d4c3777d47675e784844891ea928",
     "channel.mtg.tvse/tv3lvfanart.jpg": "8f36b6cedd0691eadce1211fc34053dc",
